# reminder-bot-rs

./: Cargo.toml  README.md  allitasok.md
samples/: getUpdates.json
src/: lib.rs  main.rs
src/id/: mod.rs
src/notify/: mod.rs
src/parser/: mod.rs
src/reminder/: mod.rs
src/telegram/: mod.rs
tests/: notify.rs
