[package]
name = "reminder-bot"
version = "0.1.0"
edition = "2021"

[dependencies.reqwest]
version = "0.10.7"
features = [
    "blocking"
]

[dev-dependencies]
mockito = "1.1.0"

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
